Fix the modules section in index.html to align in the center for all screen resolution

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,6 +127,10 @@ h1 {
     font-family: 'Oswald', sans-serif;
 }
 
+.card {
+    margin: 0 auto;
+}
+
 .card-body {
     text-align: center;
     font-family: 'Oswald', sans-serif;
